[gd_scene load_steps=34 format=3 uid="uid://bqbr75kwcpu3i"]

[ext_resource type="Script" uid="uid://bqqjre8f0yujm" path="res://common/ui/fields/timeline/monologue_timeline.gd" id="1_scldq"]
[ext_resource type="Texture2D" uid="uid://xiahr3jughjg" path="res://ui/assets/icons/plus_min.svg" id="2_qevyo"]
[ext_resource type="Texture2D" uid="uid://fcpb4fd7uma3" path="res://ui/assets/icons/trash_min.svg" id="3_i3rsl"]
[ext_resource type="PackedScene" uid="uid://wiapsnoaoc44" path="res://common/ui/custom_spinbox/custom_spinbox.tscn" id="4_i3rsl"]
[ext_resource type="Texture2D" uid="uid://08g8utdd2kai" path="res://ui/assets/icons/media_play_backward.svg" id="4_wgfvs"]
[ext_resource type="Texture2D" uid="uid://bowdhs0emx5i2" path="res://ui/assets/icons/media_skip_backward.svg" id="5_aaeml"]
[ext_resource type="Texture2D" uid="uid://ctm64x2sdw2y2" path="res://ui/assets/icons/media_stop.svg" id="6_kgr41"]
[ext_resource type="Texture2D" uid="uid://8cxo7ofybuix" path="res://ui/assets/icons/media_skip_forward.svg" id="7_gcvrj"]
[ext_resource type="Texture2D" uid="uid://bficqn5yhfmah" path="res://ui/assets/icons/media_play.svg" id="8_ga8ls"]
[ext_resource type="Texture2D" uid="uid://c07ekrem76mk3" path="res://ui/assets/icons/improt_cell.svg" id="9_vagt2"]
[ext_resource type="Script" uid="uid://csoamuetoupw0" path="res://common/ui/fields/timeline/timeline_layer_cell_container.gd" id="10_6qrpt"]
[ext_resource type="Texture2D" uid="uid://hlck6y4i3l5q" path="res://ui/assets/icons/plus.svg" id="11_u65pl"]
[ext_resource type="PackedScene" uid="uid://c3kq4oc8yxco7" path="res://common/ui/fields/timeline/timeline_cell_number.tscn" id="12_4mkmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pjie"]
bg_color = Color(0.27451, 0.27451, 0.301961, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wlqpu"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.835294, 0.317647, 0.376471, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v62g1"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.84, 0.3192, 0.37996, 0.498039)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ap2m"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.835294, 0.317647, 0.376471, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4f5yu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xe0nk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arqpt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7j2ls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_argys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aaeml"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kgr41"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcvrj"]

[sub_resource type="LabelSettings" id="LabelSettings_86o0e"]
line_spacing = 0.0
font_size = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vknlb"]
bg_color = Color(0.117647, 0.117647, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xe0nk"]
bg_color = Color(0.117647, 0.117647, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arqpt"]
bg_color = Color(0.117647, 0.117647, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j2ls"]
bg_color = Color(0.117647, 0.117647, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38dgm"]
bg_color = Color(0.27451, 0.27451, 0.301961, 0.25098)
border_width_bottom = 1
border_color = Color(0.117647, 0.117647, 0.129412, 1)
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omduo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1qxj"]

[node name="Timeline" type="PanelContainer"]
offset_right = 528.0
offset_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"CollapsibleFieldPanel"
script = ExtResource("1_scldq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2pjie")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="btnAddLayer" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_wlqpu")
theme_override_styles/hover = SubResource("StyleBoxFlat_v62g1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ap2m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4f5yu")
icon = ExtResource("2_qevyo")
expand_icon = true

[node name="btnDelete" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_wlqpu")
theme_override_styles/hover = SubResource("StyleBoxFlat_v62g1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ap2m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4f5yu")
icon = ExtResource("3_i3rsl")
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FpsSpinBox" parent="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer" instance=ExtResource("4_i3rsl")]
unique_name_in_owner = true
layout_mode = 2
suffix = "fps"

[node name="PlayBackwardsButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
icon = ExtResource("4_wgfvs")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SkipBackwardButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
icon = ExtResource("5_aaeml")
flat = true
icon_alignment = 1
expand_icon = true

[node name="StopButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
icon = ExtResource("6_kgr41")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SkipForwardButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
icon = ExtResource("7_gcvrj")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PlayButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
icon = ExtResource("8_ga8ls")
flat = true
icon_alignment = 1
expand_icon = true

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="ImportFrameButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_xe0nk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arqpt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7j2ls")
theme_override_styles/normal = SubResource("StyleBoxEmpty_argys")
disabled = true
icon = ExtResource("9_vagt2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="LayerContainer" type="HSplitContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5
script = ExtResource("10_6qrpt")

[node name="LayerContainer" type="PanelContainer" parent="VBoxContainer/LayerContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_aaeml")

[node name="MainLayerVBox" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kgr41")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_gcvrj")

[node name="Label" type="Label" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/PanelContainer/HBoxContainer/PanelContainer4"]
layout_mode = 2
label_settings = SubResource("LabelSettings_86o0e")

[node name="LayerScrollContainer" type="ScrollContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/LayerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="LayerVBox" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/LayerScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="btnAddLayer" type="Button" parent="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/LayerScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
theme_override_constants/icon_max_width = 10
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vknlb")
theme_override_styles/hover = SubResource("StyleBoxFlat_xe0nk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_arqpt")
theme_override_styles/normal = SubResource("StyleBoxFlat_7j2ls")
icon = ExtResource("11_u65pl")
icon_alignment = 1

[node name="LayerTimelineContainer" type="ScrollContainer" parent="VBoxContainer/LayerContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="LayerTimelineVBox" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FrameCountTimeline" type="PanelContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_38dgm")

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/FrameCountTimeline"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="CellNumberHBox" type="HBoxContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/FrameCountTimeline/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="CellNumber" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/FrameCountTimeline/HBox/CellNumberHBox" instance=ExtResource("12_4mkmo")]
layout_mode = 2

[node name="PanelContainer6" type="PanelContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/FrameCountTimeline/HBox"]
custom_minimum_size = Vector2(27, 26)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_omduo")

[node name="LayerTimelineScrollContainer" type="ScrollContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/LayerTimelineScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LayerTimelineVBox" type="VBoxContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/LayerTimelineScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/LayerTimelineScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t1qxj")

[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/FpsSpinBox" to="." method="_on_fps_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/PlayBackwardsButton" to="." method="_on_play_backwards_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/SkipBackwardButton" to="." method="_on_skip_backward_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/SkipForwardButton" to="." method="_on_skip_forward_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ImportFrameButton" to="." method="_on_import_frame_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/LayerContainer" to="VBoxContainer/LayerContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/LayerContainer" to="VBoxContainer/LayerContainer" method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/LayerScrollContainer" to="." method="_on_layer_scroll_container_gui_input"]
[connection signal="pressed" from="VBoxContainer/LayerContainer/LayerContainer/MainLayerVBox/LayerScrollContainer/VBoxContainer/btnAddLayer" to="." method="_on_btn_add_layer_pressed"]
[connection signal="gui_input" from="VBoxContainer/LayerContainer/LayerTimelineContainer/LayerTimelineVBox/LayerTimelineScrollContainer" to="." method="_on_layer_timeline_scroll_container_gui_input"]
